my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/20000227-1.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20000227-1.c:2:37: warning: illegal character encoding in string literal [-Winvalid-source-encoding]
    2 | static const unsigned char g[] = "\0<FF>";
      |                                     ^~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20000227-1.c:7:5: error: call to undeclared library function 'abort' with type 'void (void) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
    7 |     abort ();
      |     ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20000227-1.c:7:5: note: include the header <stdlib.h> or explicitly provide a declaration for 'abort'
1 warning and 1 error generated.
